Tue Apr 14 10:06:19 CDT 2009  Phil Mesnier  <mesnier_p@ociweb.com>

	* ACE version 5.6.9 released.

Tue Apr 14 13:57:16 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
        
          Reworded entries to be consistent with release note.

Mon Apr 13 12:19:18 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-linux-common.h:

          Reverted previous change.

Sun Apr 12 20:37:11 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-linux-common.h:

          The Rawhide nightly build shows that the scandir and alphasort
          functions have been redefined to finally take dirrent args. The
          detectable difference appears to be in the glibc version code,
          which is 2.9 on the Rawhide build machine.

Sat Apr 11 13:13:49 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-macosx-leopard.h:

          Darwin also has a variation that varies the signature of
          unsetenv().

Fri Apr 10 10:26:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h
          OpenVMS lacks setenv/unsetenv

Fri Apr 10 03:32:04 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_stdlib.inl:

          Fix typo from previous commit.

Fri Apr 10 03:00:44 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_stdlib.inl:
        * ace/config-qnx-rtp-common.h:

          The newly added [un]setenv wrappers don't compile on qnx rtp
          because that platform defines unsetenv as having a void
          return. It is possible that other platforms have this as well,
          as legacy linux man pages show that signature.

Thu Apr  9 12:34:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Reverted renaming of ACE_HAS_NONCONST_WFDOPEN define

Thu Apr  9 11:45:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Resolved compiler error on WinCE 5 VC 8.
