@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="5.6.9/html">5.6.9</A></P></LI>
       <LI><P><A HREF="5.6.8/html">5.6.8</A></P></LI>
       <LI><P><A HREF="5.6.7/html">5.6.7</A></P></LI>
       <LI><P><A HREF="5.6.6/html">5.6.6</A></P></LI>
