@@ -3,6 +3,10 @@ PLANNED MAJOR CHANGES "SOMETIME IN THE FUTURE" (i.e., exact beta not known)
 
 . RPM packaging as part of the release process by the doc_group (Remedy and user community)
 
+USER VISIBLE CHANGES BETWEEN ACE-5.6.9 and ACE-5.7.0
+====================================================
+
+
 USER VISIBLE CHANGES BETWEEN ACE-5.6.8 and ACE-5.6.9
 ====================================================
 
